# propiedades_cpp

./: README.md
cpp_config/: README.md  cpp_config.py  pyproject.toml
cpp_config/cpp_config.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
